# postgres-connect-rust

./: Cargo.toml  README.md
files/: config.toml
src/: main.rs
src/read/: args.rs  config.rs  db.rs  mod.rs  queries.rs
src/write/: mod.rs  queries.rs  utils.rs
