[package]
name = "postgres-connect-rust"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # for exploratory dev

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
] }
serde_json = "1.0.140"
